[metadata]
name = divisiveclustering
description = "Divisive clustering using VQA"
long_description = file: README.md
long_description_content_type = text/markdown
charset=UTF-8
url = https://github.com/Boniface316/VQA.git
author = "Boniface Yogendran"
author_email = "boniface.yogi@gmail.com"
classifiers =
Programming Language :: Python :: 3
Operating System :: OS Independent
License :: OSI Approved :: Apache Software License
Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir =
	= src

install_requires =
	pandas
	numpy
	networkx~=2.8.5
	pennylane~=0.20.0
	matplotlib~=3.5.2
	scipy~=1.10.1
	scikit-learn~=1.2.2
	tqdm~=4.66.4


[options.packages.find]
where = src

[options.extras_require]
dev =
	black~=22.3
	flake8~=3.9.0
	isort~=5.9.0
	mypy~=0.910
	pytest~=6.2
	pytest-cov >=2.12
	pre-commit~=2.19
	commitizen~=2.27

[flake8]
ignore = E203,E266,F401,W605
max-line-length = 88
